...
                                fontWeight = FontWeight.Bold
                            )
                        }
                    },
                    actions = {
                        IconButton(onClick = { menuExpanded = true }) {
                            Icon(imageVector = Icons.Filled.Menu, contentDescription = "Menu")
                        }

                    }
                )
            }
        }
...
